--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
               <p>css</p>
             </div>
           </div>
-          <div class="activity">
+          <div class="activity2">
             <div class="dani">
               <img
                 src="./images/responsive-web-design-web-development-html-css3-cascading-style-sheets-world-wide-web-2948cdc6d5c2a06c42409a59326ad5bc 1.png"
@@ -131,9 +131,101 @@
       </div>
     </section>
 
-    <section class="information">
+    <section class="section2">
       <div class="main-container">
-        <h2 class="dani3">Experience</h2>
+        <h2 class="text-header">Experience</h2>
+        <div class="cv-details">
+          <div class="arrow">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="113"
+              height="48"
+              viewBox="0 0 113 48"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M77.9199 47.9773L112.14 24.1936L77.9199 0.409936L77.9199 0.392097L77.8943 0.392097L77.8844 0.385252L77.8844 0.392097L-2.99153e-10 0.392093L-2.08125e-06 47.9987L77.8844 47.9987L77.8844 48.002L77.8891 47.9987L77.9199 47.9987L77.9199 47.9773Z"
+                fill="#5D5E61"
+              />
+            </svg>
+          </div>
+          <div class="cv-detail"></div>
+          <div class="cv-text">
+            <h3>Senior Front End Developer</h3>
+            <h4>tehran, DigiKala</h4>
+            <p>
+              Qorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+              turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+              nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+              tellus elit sed risus. Maecenas eget condimentum velit, sit amet
+              feugiat lectus. Class aptent taciti sociosqu ad litora torquent
+              per conubia nostra, per inceptos himenaeos. Praesent auctor purus
+              luctus enim egestas, ac scelerisque ante pulvinar. Donec ut
+              rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur
+              vel bibendum lorem. Morbi convallis convallis diam sit amet
+              lacinia. Aliquam in elementum tellus.
+            </p>
+          </div>
+        </div>
+
+        <div class="cv-details">
+          <div class="arrow">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="113"
+              height="48"
+              viewBox="0 0 113 48"
+              fill="none"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M77.9199 47.9773L112.14 24.1936L77.9199 0.409936L77.9199 0.392097L77.8943 0.392097L77.8844 0.385252L77.8844 0.392097L-2.99153e-10 0.392093L-2.08125e-06 47.9987L77.8844 47.9987L77.8844 48.002L77.8891 47.9987L77.9199 47.9987L77.9199 47.9773Z"
+                fill="#5D5E61"
+              />
+            </svg>
+          </div>
+          <div class="cv-detail"></div>
+          <div class="cv-text">
+            <h3>Senior Front End Developer</h3>
+            <h4>tehran, DigiKala</h4>
+            <p>
+              Qorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu
+              turpis molestie, dictum est a, mattis tellus. Sed dignissim, metus
+              nec fringilla accumsan, risus sem sollicitudin lacus, ut interdum
+              tellus elit sed risus. Maecenas eget condimentum velit, sit amet
+              feugiat lectus. Class aptent taciti sociosqu ad litora torquent
+              per conubia nostra, per inceptos himenaeos. Praesent auctor purus
+              luctus enim egestas, ac scelerisque ante pulvinar. Donec ut
+              rhoncus ex. Suspendisse ac rhoncus nisl, eu tempor urna. Curabitur
+              vel bibendum lorem. Morbi convallis convallis diam sit amet
+              lacinia. Aliquam in elementum tellus.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="info">
+      <div class="sadra">
+        <div class="info-container">
+          <div class="about-info">
+            <h2 class="text-header">About</h2>
+            <div class="text-main sadra">
+              <p class="text text-info">
+                Norem ipsum dolor sit amet, consectetur adipiscing elit. Etiam
+                eu turpis molestie, dictum est a, mattis tellus. Sed fdf
+                dignissim, metus nec fringilla accumsan, risus sem dffsd
+                sollicitudin lacus, ut interdum tellus elit sed risus. Maecenas
+                eget condimentum velit.
+              </p>
+            </div>
+          </div>
+          <div class="about-img-section">
+               <img src="./images/info.png" alt="">
+          </div>
+        </div>
       </div>
     </section>
   </body>
